Closed
Bug 306235
Opened 20 years ago
Closed 20 years ago
keyboard stops working on window restore from minimized state
Categories
(Thunderbird :: Mail Window Front End, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird1.1
People
(Reporter: jellis, Assigned: aaronlev)
References
Details
(Keywords: regression, verified1.8, Whiteboard: [ ETA: tcaused bug reregression of 305032 on trunk. New patch posted in bug 305032 for trunk which works for both testcases ])
Attachments
(1 obsolete file)
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b4) Gecko/20050825 Firefox/1.0+
Build Identifier: 20050826 branch
If you minimize a Thunderbird window and restore it, the that window stops
accepting input from the keyboard of any kind -- menu shortcuts, arrow keys, etc.
Bringing another Thunderbird window to the front (using the mouse) and then
going back to the problem window fixes the issue.
Reproducible: Always
Steps to Reproduce:
1. Minimize the main Thunderbird window
2. Restore the main Thunderbird window
3. Press Ctrl-M
4. Press Alt-F
Actual Results:
Nothing happens
Expected Results:
New composition window should appear, then file menu should appear
I've been using Thunderbird Alpha 2 and just switched to nightlies with the
20050826 branch build, so I'm not sure when this regressed (assuming others see it).
| Reporter | ||
Comment 1•20 years ago
|
||
Regression date info: I see this issue in the 20050817 branch build but not in
the 20050816 branch build.
Comment 2•20 years ago
|
||
I see this also in Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b4)
Gecko/20050828 Thunderbird/1.0+ ID:2005082804
Further clarification/symptoms:
Restore down (small window) restore up (large window) restores functionality.
If you open the indox, and select a message, then minimize and restore, you lose
focus on the message. Restore down, then up re-focuses the selected message.
Could not verify the regression date, but possibly bug #302120 checkin on 08/16
cc to Neil on the possible regression
Comment 3•20 years ago
|
||
Bug 302120 doesn't relate to the main mail window.
I can reproduce this in a Suite nightly, so it might be a Windows widget bug.
However, it would be helpful if you could get an accurate regression range.
Keywords: qawanted
Comment 4•20 years ago
|
||
Confirming original posters regression range
tb version 1.0+ (20050816) works fine
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b4) Gecko/20050817
Thunderbird/1.0+ ID:2005081707
Shows the symtoms described in the original bug report.
Comment 5•20 years ago
|
||
I see this in my branch build too. Needs to be fixed before next beta.
Comment 6•20 years ago
|
||
agree this bug needs to block 1.8b4. triage team: we need to plus this bug.
This regression was caused by aaronl's change for Bug 258285. Backing that
change out of the branch makes keyboard inputs work again for me.
Updated•20 years ago
|
Flags: blocking1.8b4? → blocking1.8b4+
| Assignee | ||
Comment 7•20 years ago
|
||
This is very low risk because it is patching out a change that was made for
only one of the testcases which caused bug 258285.
The testcase was:
1) Make google.com your home page
2) Minimze all copies of Firefox
3) Launch Firefox from an icon on your desktop
Apparently this part of the fix wasn't necessary to fix that anymore. After
some of the other pieces of the fix for bug 258285 were developed, they also
took care of this testcase.
Attachment #194456 -
Flags: superreview?(bryner)
Attachment #194456 -
Flags: review?(mats.palmgren)
| Assignee | ||
Updated•20 years ago
|
Whiteboard: [ ETA: need review ]
Updated•20 years ago
|
Attachment #194456 -
Flags: superreview?(bryner) → superreview+
| Assignee | ||
Comment 8•20 years ago
|
||
Comment on attachment 194456 [details] [diff] [review]
Very low risk. Partial backout of bug 258285 -- only changes to nsWebShellWindow.cpp
Brian, you might as well give me r+sr=. This is just backing out an atomic
change that we don't need.
Attachment #194456 -
Flags: review?(mats.palmgren) → review?(bryner)
Updated•20 years ago
|
Attachment #194456 -
Flags: review?(bryner) → review+
| Assignee | ||
Updated•20 years ago
|
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Comment 9•20 years ago
|
||
*** Bug 305587 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 10•20 years ago
|
||
Comment on attachment 194456 [details] [diff] [review]
Very low risk. Partial backout of bug 258285 -- only changes to nsWebShellWindow.cpp
Very low risk -- backout of atomic change from recent fix for bug 258285.
Attachment #194456 -
Flags: approval1.8b4?
Updated•20 years ago
|
Attachment #194456 -
Flags: approval1.8b4? → approval1.8b4+
| Assignee | ||
Updated•20 years ago
|
Whiteboard: [ ETA: need review ] → [ ETA: this may have caused bug 306235 on trunk, so we need to investigate before checking in on branch ]
| Assignee | ||
Comment 11•20 years ago
|
||
This change caused bug 305032 (launch from new icon after minimize) to break again.
We never had all that working in the first place, but fixing it caused this bug.
Right now we have to choose between fixing that bug and this one.
| Assignee | ||
Updated•20 years ago
|
Attachment #194456 -
Attachment is obsolete: true
| Assignee | ||
Comment 12•20 years ago
|
||
Reopening. We need one fix that simultaneously solves both this and bug 305032.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Whiteboard: [ ETA: this may have caused bug 306235 on trunk, so we need to investigate before checking in on branch ] → [ ETA: tcaused bug reregression of 305032 on trunk. New patch posted in bug 305032 for trunk which works for both testcases ]
Updated•20 years ago
|
Attachment #194456 -
Flags: approval1.8b4+
Comment 13•20 years ago
|
||
Aaron, is there a way to reproduce this bug using only Firefox?
or SeaMonkey Mail? (given that I reverse the attached patch of course)
Comment 14•20 years ago
|
||
you should be able to see this in seamonkey mail too. Make sure you have a
message selected and focused int eh thread pane. then minimize, maximize.
Comment 15•20 years ago
|
||
*** Bug 305601 has been marked as a duplicate of this bug. ***
Comment 16•20 years ago
|
||
Yes, I see also this problem in Firefox.
Regression range 1.8b4_2005081606 (works) and 1.8b4_2005081615 (fails).
Comment 17•20 years ago
|
||
The problem in Firefox is only reproducible for me with middle sized windows,
not with maximized windows.
| Assignee | ||
Comment 18•20 years ago
|
||
Fixed by checkin to bug 305032.
Status: REOPENED → RESOLVED
Closed: 20 years ago → 20 years ago
Resolution: --- → FIXED
Comment 19•20 years ago
|
||
v.fixed with today's branch respin: Mozilla/5.0 (Windows; U; Windows NT 5.1;
en-US; rv:1.8b4) Gecko/20050906 Firefox/1.4
Keywords: fixed1.8 → verified1.8
You need to log in
before you can comment on or make changes to this bug.
Description
•