bug 306235. Keyboard stops working on window restore of Thunderbird main window from minimized state. Partial backout of now unnecessary part of bug 258285. r+sr=bryner